--- a/src/scss/section/_ps-footer.scss
+++ b/src/scss/section/_ps-footer.scss
@@ -52,7 +52,10 @@
     flex: 0 0 100%;
     max-width: 100%;
     color: #fff;
-    @include font(32px, $font, 42px, 400);
+    @include font(26px, $font, 32px);
+    @include breakpoint(medium) {
+        @include font(32px, $font, 42px);
+    }
     margin-bottom: 20px;
 }
 
@@ -95,6 +98,11 @@
     label {
         color: #fff;
         @include font(16px, $font, 22px, 400);
+        display: flex;
+        align-items: center;
+        text-decoration: underline;
+        position: relative;
+        padding-left: 30px;
         &:before {
             width: 17px;
             height: 17px;
@@ -103,6 +111,9 @@
             content: "";
             box-sizing: border-box;
             display: inline-block;
+            position: absolute;
+            left:0;
+            top:2px;
         }
         &:after {
             content: "";
@@ -111,7 +122,7 @@
         }
     }
     input[type="radio"]:checked + label {
-        position: relative;
+        padding-left: 30px;
         &:before {
             border: 2px solid #ffffff;
         }
@@ -121,7 +132,7 @@
             height: 7px;
             background-color: #ffffff;
             position: absolute;
-            top: 3px;
+            top: 7px;
             left: 5px;
             border-radius: 50%;
         }
@@ -143,7 +154,9 @@
     max-width: 100%;
     a {
         color: #fff;
+
         @include font(28px, $font, 36px, 600);
+
         letter-spacing: -0.02em;
         text-decoration: underline;
         text-transform: uppercase;
@@ -196,7 +209,6 @@
     }
 }
 
-
 .ps-footer__copyright {
     background: #d6001c;
     flex: 0 0 100%;
@@ -206,7 +218,7 @@
     max-width: 1920px;
     padding: 30px 40px 30px 40px;
     @include breakpoint(xlarge) {
-    padding: 30px 80px 30px 80px;
+        padding: 30px 80px 30px 80px;
     }
     margin: 0 auto;
     display: flex;
@@ -229,6 +241,7 @@
     text-transform: uppercase;
     color: #fff;
     @include font(32px, $font, 40px, 700);
+    letter-spacing: -0.04em;
 }
 
 .ps-footer__dati__maps {
@@ -246,13 +259,22 @@
     @include font(22px, $font, 26px, 700);
     padding: 10px 0 10px 100px;
     background: url("../../img/fiat.png") no-repeat center left;
+    margin-top: 40px;
+    @include breakpoint(large) {
     margin-top: 60px;
+    }
 }
 
 .ps-footer__dati__social {
-    margin-top: 60px;
     font-size: 0;
     display: flex;
+
+    margin-bottom: 40px;
+    margin-top: 40px;
+    @include breakpoint(large) {
+        margin-bottom: 0px;
+        margin-top: 60px;
+    }
 }
 
 .ps-footer__dati__social__icon {
@@ -298,9 +320,14 @@
         position: relative;
         top: 4px;
     }
+    margin-top:40px;
+    @include breakpoint(large) {
+        margin-top:0px;
+    }
 }
 
 .ps-footer__dati__mail {
+    margin-top:20px;
     a {
         color: #fff;
         @include font(16px, $font, 20px, 400);
