--- a/src/scss/components/_ps-boxdettaglio.scss
+++ b/src/scss/components/_ps-boxdettaglio.scss
@@ -1,25 +1,25 @@
-.ps-content__dettaglio{
+.ps-content__dettaglio {
   background: #232323;
   padding: 80px 0;
   margin-bottom: 80px;
   @include breakpoint(large) {
-  padding: 120px 0;
-  margin-bottom: 120px;
+    padding: 120px 0;
+    margin-bottom: 120px;
   }
 }
 
-.ps-content__dettaglio__content{
+.ps-content__dettaglio__content {
   box-sizing: border-box;
   max-width: 1920px;
   margin: 0 auto;
   padding: 0 40px;
   @include breakpoint(xlarge) {
-  padding: 0 80px;
+    padding: 0 80px;
   }
   position: relative;
 }
 
-.ps-content__dettaglio__title{
+.ps-content__dettaglio__title {
   color: #fff;
   @include font(38px, $font, 48px, 500);
   @include breakpoint(large) {
@@ -31,26 +31,26 @@
   margin-right: 80px;
 }
 
-.ps-content__dettaglio__description{
-  color: rgba(#fff,.5);
+.ps-content__dettaglio__description {
+  color: rgba(#fff, 0.5);
   @include font(20px, $font, 30px);
   margin-bottom: 40px;
   @include breakpoint(large) {
     @include font(26px, $font, 36px);
   }
   @include breakpoint(xlarge) {
-  margin-bottom: 80px;
+    margin-bottom: 80px;
   }
 }
 
-.ps-content__dettaglio__close{
+.ps-content__dettaglio__close {
   position: absolute;
   width: 40px;
   height: 40px;
   top: 0px;
   right: 40px;
   @include breakpoint(xlarge) {
-  right: 80px;
+    right: 80px;
   }
   color: #fff;
   width: 30px;
@@ -59,14 +59,15 @@
   @include breakpoint(large) {
     width: 40px;
     height: 40px;
-    @include font(48px, $font, 48px, 300);
+    content: "";
+    background: url("../../img/close.svg") no-repeat center center;
   }
   cursor: pointer;
 }
 
-.ps-swiper__container{
+.ps-swiper__container {
   margin-left: 40px;
   @include breakpoint(xlarge) {
-  margin-left: 80px;
+    margin-left: 80px;
   }
 }
