--- a/src/scss/components/_ps-select.scss
+++ b/src/scss/components/_ps-select.scss
@@ -1,4 +1,3 @@
-
 .ps-select {
   width: 100%;
   height: 40px;
@@ -7,14 +6,13 @@
   font-size: 0;
   cursor: pointer;
   position: relative;
-  border-bottom: solid 1px #000;
+  border-bottom: solid 1px #cccccc;
 }
 
-
 .ps-select__content {
-  padding: 5px 10px;
+  padding: 5px 0px;
   &:focus {
-	outline: none;
+    outline: none;
   }
 }
 
@@ -27,16 +25,17 @@
   position: absolute;
   left: -1px;
   top: 39px;
-  transition: .4s max-height;
+  transition: 0.4s max-height;
   overflow: hidden;
   z-index: 1;
 }
 
 .ps-select__item {
   @include font(15px, $font, 20px);
-  color: #535d66;
+  color: #000;
   padding: 10px;
-  border: 1px solid #e6e8ea;
+  border: 1px solid #d6001c;
+
   border-right-width: 0px;
   border-left-width: 0px;
   border-top: none;
@@ -46,19 +45,17 @@
   cursor: pointer;
 
   &:hover {
-	background: #fcf9f1;
+    background: #fcf9f1;
   }
 
   &:last-child {
-	border-bottom: none;
+    border-bottom: none;
   }
 }
 
-
-
 .ps-select__placeholder {
-  @include font(17px, $font, 28px);
-  color: #c1c8ce;
+  @include font(22px, $font, 30px);
+  color: #000;
 }
 
 .ps-select__text {
@@ -74,10 +71,10 @@
   position: absolute;
   right: 10px;
   top: 10px;
-  transition: .4s transform;
+  transition: 0.4s transform;
   background: url("../../img/select.svg") no-repeat center center;
   width: 20px;
-    height: 13px;
+  height: 13px;
 }
 
 //** ** **//
@@ -85,31 +82,28 @@
 //** ** **//
 .x-opened {
   .ps-select__items {
-	max-height: 195px;
-	overflow: auto;
-	border: 2px solid #c1c8ce;
-	background: #FFF;
-	-webkit-overflow-scrolling: touch;
+    max-height: 195px;
+    overflow: auto;
+    border: 2px solid #c1c8ce;
+    background: #fff;
+    -webkit-overflow-scrolling: touch;
   }
 
   .ps-select__arrow {
-	transform: rotate(180deg);
+    transform: rotate(180deg);
   }
 }
-
-
 
 .x-selectbox__item--selected {
   @include font(15px, $font, 20px);
-	color:#535d66;
+  color: #535d66;
   background-color: #fcf9f1;
   &::after {
-	content: "\E244";
-	@include font(20px, $font, 39px);
-	color: #43b15c;
-	position: absolute;
-	right: 10px;
-	top: 0;
+    content: "\E244";
+    @include font(20px, $font, 39px);
+    color: #43b15c;
+    position: absolute;
+    right: 10px;
+    top: 0;
   }
 }
-
