--- a/src/scss/section/_ps-footer.scss
+++ b/src/scss/section/_ps-footer.scss
@@ -112,8 +112,8 @@
             box-sizing: border-box;
             display: inline-block;
             position: absolute;
-            left:0;
-            top:2px;
+            left: 0;
+            top: 2px;
         }
         &:after {
             content: "";
@@ -203,6 +203,13 @@
 .ps-footer__dati__content--right {
     flex: 0 0 100%;
     max-width: 100%;
+    box-sizing: border-box;
+    @include breakpoint(xlarge) {
+        padding-left: 40px;
+    }
+    @include breakpoint(xxxlarge) {
+        padding-left: 0px;
+    }
     @include breakpoint(large) {
         flex: 0 0 50%;
         max-width: 50%;
@@ -261,7 +268,7 @@
     background: url("../../img/fiat.png") no-repeat center left;
     margin-top: 40px;
     @include breakpoint(large) {
-    margin-top: 60px;
+        margin-top: 60px;
     }
 }
 
@@ -320,14 +327,14 @@
         position: relative;
         top: 4px;
     }
-    margin-top:40px;
+    margin-top: 40px;
     @include breakpoint(large) {
-        margin-top:0px;
+        margin-top: 0px;
     }
 }
 
 .ps-footer__dati__mail {
-    margin-top:20px;
+    margin-top: 20px;
     a {
         color: #fff;
         @include font(16px, $font, 20px, 400);
