placeholder select + fix slider

--- a/src/scss/components/_ps-select.scss
+++ b/src/scss/components/_ps-select.scss
@@ -56,6 +56,9 @@
 .ps-select__placeholder {
   @include font(22px, $font, 30px);
   color: #000;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .ps-select__text {
