--- a/src/scss/section/_ps-content.scss
+++ b/src/scss/section/_ps-content.scss
@@ -129,8 +129,9 @@
     display: flex;
     justify-content: space-between;
     flex-flow: row wrap;
-    .ps-select {
+    .ps-content__search__select__item {
       flex: 1 1 0px;
+      min-width: 0;
     }
     .ps-content__search__select__label {
       flex: 0 0 auto;
