--- a/src/scss/section/_ps-content.scss
+++ b/src/scss/section/_ps-content.scss
@@ -12,7 +12,7 @@
   flex-flow: row wrap;
   max-width: 1920px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 30px;
   @include breakpoint(xlarge) {
     padding: 0 50px;
   }
@@ -33,14 +33,39 @@
 }
 
 .ps-content__box__img {
-  background-size: cover;
+  position: relative;
+  background-repeat:no-repeat;
+  background-position:1000px 1000px;
+  cursor: pointer;
+  &:before{
+    background-image: inherit;
+    background-size: cover;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: ease 600ms transform,ease  opacity 550ms;
+    transition-delay: 10ms;
+    transform: translate(10px,20px);
+    @include breakpoint(xxlarge) {
+    transform: translate(20px,30px);
+    }
+  }
+  &.x-activehover {
+    &:before{
+      transform: translate(0px);
+      opacity: 1;
+    }
+  }
   img {
     width: 100%;
-    cursor: pointer;
-    transition: ease 200ms transform;
+    transition: ease 500ms transform;
+    z-index: 2;
+    position: relative;
     &:hover {
       transform-origin: center center;
-      transform: rotate(5deg);
+      transform: rotate(4deg);
     }
   }
 }
@@ -48,6 +73,10 @@
 .ps-content__box__text {
   display: flex;
   flex-flow: row wrap;
+  margin-top: 20px;
+  @include breakpoint(xxlarge) {
+  margin-top: 40px;
+  }
 }
 
 .ps-content__box__title {
@@ -68,7 +97,8 @@
 }
 
 .ps-content__box__data {
-  @include font(20px, $font, 25px, 400);
+  @include font(20px, 
+  $font, 25px, 400);
   @include breakpoint(xxxlarge) {
     @include font(26px, $font, 35px, 400);
   }
